--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,10 +28,5 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push Docker image
-        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
-        with:
-          context: .
-          push: true
-          tags: 1.0.0
-          
+      - name: build
+        run: docker build --platform windows/amd64 --push ghcr.io/saedx1/windows-server-2022-k8s:1.0.0
